Checkout page mobile responsive, spacing issue

--- a/app/design/frontend/Mgs/claue_rtl/web/css/theme.less
+++ b/app/design/frontend/Mgs/claue_rtl/web/css/theme.less
@@ -15159,6 +15159,7 @@ ul.social-link li {
     }
     .checkout-index-index .opc-wrapper {
       padding-left: 0;
+      width: 100%;
     }
     .checkout-index-index .opc-progress-bar .opc-progress-bar-item:first-child {
       margin: 0 0 0 10px !important;
